# elile

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_INDEX.md  IMPLEMENTATION_STATUS.md  README.md  handoff.md  langgraph.json  phase5_rework.md  prompt.md  pyproject.toml  pytest_local.ini
.claude/: .nfs.200510c3.b779  settings.local.json
.claude/commands/: continue.md  session-handoff.md
docs/: .nfs.200510bd.9107  architecture.md  database-setup.md
docs/architecture/: 01-design.md  02-core-system.md  03-screening.md  04-monitoring.md  05-investigation.md  06-data-sources.md  07-compliance.md  08-reporting.md  09-integration.md  10-platform.md  11-interfaces.md  12-roadmap.md  README.md
docs/plans/: MASTER_IMPLEMENTATION_PLAN.md  P0-TASKS-SUMMARY.md  P1-TASKS-SUMMARY.md  P2-TASKS-SUMMARY.md  P3-TASKS-SUMMARY.md  README.md  phase-01-core-infrastructure.md  phase-02-service-configuration.md  phase-03-entity-management.md  phase-04-data-providers.md  phase-05-investigation-engine.md  phase-06-risk-analysis.md  phase-07-screening-service.md  phase-08-reporting-system.md  phase-09-monitoring-vigilance.md  phase-10-integration-layer.md  phase-11-user-interfaces.md  phase-12-production-readiness.md
implementation_plans/: task-1.1-database-schema-foundation.md  task-1.10-redis-cache-setup.md  task-1.11-structured-logging.md  task-1.2-audit-logging.md  task-1.3-request-context-framework.md  task-1.4-multi-tenancy-infrastructure.md  task-1.5-fastapi-framework-setup.md  task-1.6-encryption-utilities.md  task-1.7-error-handling-framework.md  task-1.8-configuration-management.md  task-1.9-database-repository-pattern.md  task-10.1-hris-gateway.md  task-10.2-webhook-receiver.md  task-10.3-event-processor.md  task-11.2-compliance-portal-api.md  task-12.1-performance-profiling.md  task-12.2-database-optimization.md  task-12.3-security-hardening.md  task-12.4-secrets-management.md  task-2.1-locale-check-type-definitions.md  task-2.2-compliance-rules-repository.md  task-2.3-compliance-engine.md  task-2.4-consent-management.md  task-2.5-service-configuration-validation.md  task-3.1-entity-resolution-engine.md  task-3.10-gdpr-erasure.md  task-3.11-cross-screening-index.md  task-3.2-entity-deduplication.md  task-3.3-canonical-entity-management.md  task-3.4-entity-validation.md  task-3.5-multi-tenant-entity-isolation.md  task-3.9-data-retention.md  task-4.1-provider-interface-registry.md  task-4.11-sanctions-provider.md  task-4.12-education-verification-provider.md  task-4.2-provider-health-availability.md  task-4.3-rate-limiting.md  task-4.4-response-caching.md  task-4.5-cost-tracking.md  task-4.6-request-routing.md  (+17 more)
migrations/: env.py
post-mortem/: analysis.md
tasks/: tasks_to_be_completed.md
tests/: __init__.py  conftest.py
(+527 files in other folders)
